--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Debashis Barman | Freelance Web Designer
+title: Debashis Barman
 email: deb.dbuniversity@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Debashis Barman is a Freelance Web Designer. He specializes in Minimalist Web Design, Responsive Layout and Web Typography.
