--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Debashis Barman
 email: deb.dbuniversity@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Personal website and blog by Debashis Barman, Computer Science. This site is built on Jekyll and hosted on Github pages.
+  Debashis Barman is a Freelance Web Designer. He specializes in Minimalist Web Design, Responsive Layout and Web Typography.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://www.debashisbarman.in" # the base hostname & protocol for your site
 twitter_username: _DebashisBarman
